--- a/app/views/pul_store/lae/folders/edit.html.erb
+++ b/app/views/pul_store/lae/folders/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Update Folder</h1>
-
+<%= render :partial => 'shared/lae/workflow_state', locals: {object: @folder} %>
 <%= render 'form' %>
 
 <%= link_to 'Show', @folder %> |
