--- a/app/views/layouts/lae.html.erb
+++ b/app/views/layouts/lae.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <%= raw(render_head_content) %> 
+    <%= raw(render_head_content) %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -17,7 +17,7 @@
     <![endif]-->
 
   </head>
-  <body class="<%= render_body_class %>">
+  <body class="<%= render_body_class %>" data-no-turbolink>
   <%= render :partial => 'shared/lae/header_navbar' %>
 
   <div id="ajax-modal" class="modal hide fade" tabindex="-1"></div>
@@ -34,12 +34,12 @@
                         <div id="main-flashes">
                           <%= render :partial=>'/flash_msg' %>
                         </div>
-                      </div>    
-                  </div>              
+                      </div>
+                  </div>
 
                   <div class="row">
                        <%= yield %>
-                       </div>   
+                       </div>
 </div>
 
 <%= render :partial => 'shared/footer' %>
