--- a/app/views/pul_store/lae/folders/_folder.html.erb
+++ b/app/views/pul_store/lae/folders/_folder.html.erb
@@ -12,9 +12,9 @@
     <div class="alert alert-success">
       <a class="close" data-dismiss="alert">&times;</a>
       <h2>Created: <%= @folder.id %></h2>
-      <%= link_to 'Edit Folder', edit_lae_folder_path(@folder), class: "btn" %> |
+      <%= link_to 'Edit Folder', edit_lae_folder_path(@folder), class: "btn btn-success" %> |
       <% if(!@folder.box_id.blank?) %>
-        <%= link_to 'Return to Box', edit_lae_box_path(@folder.box_id), class: "btn"%>
+        <%= link_to 'Return to Box', edit_lae_box_path(@folder.box_id), class: "btn btn-info"%>
       <% end %>
     </div>
   <% end %>
