Added test. Showing number most prominent places rathe rthan barcode

--- a/app/views/pul_store/lae/boxes/show.html.erb
+++ b/app/views/pul_store/lae/boxes/show.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Barcode:</strong>
-  <%= @box.barcode %>
+  <strong>Box <%= @box.physical_number %></strong>
 </p>
 <%= render :partial => 'shared/lae/workflow_state', locals: {object: @box} %>
 <% if can?(:edit, @box) %>
