Show box # on edit screen

--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="span6">
       <h1 class="lae-head">Box <%= @box.physical_number %></h1>
+      <p>Barcode: <%= @box.barcode %></p>
     </div>
     <div class="span3">
       <!-- start modal -->
