--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :barcode %>
   </div>
   <div class="field">
+    <%= f.label "Folder Number" %><br>
+    <%= f.text_field :physical_number %>
+  </div>
+  <div class="field">
     <%= f.label :genre %><br>
     <%= f.select(:genre, options_for_select(list_all_genres_as_select_list)) %>
   </div>
