Add a prevent default to keep key events from prematurely submitting forms that include a barcode field.

--- a/app/views/pul_store/lae/boxes/_brief_form.erb
+++ b/app/views/pul_store/lae/boxes/_brief_form.erb
@@ -12,7 +12,7 @@
 
   <div class="field">
     <%= b.label "Scan a #{:barcode}" %><br>
-    <%= b.text_field :barcode %>
+    <%= b.text_field :barcode, class: 'barcode'  %>
   </div>
 
    <div class="actions">
