--- a/app/views/pul_store/lae/boxes/_form.html.erb
+++ b/app/views/pul_store/lae/boxes/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="control-group">
     <%= b.label :barcode, :class => 'control-label' %>
     <div class="controls">
-      <%= b.text_field :barcode %>
+      <%= b.text_field :barcode, class: 'barcode' %>
     </div>
   </div>
   <div class="control-group">
