--- a/app/views/pul_store/lae/catalog/_document.html.erb
+++ b/app/views/pul_store/lae/catalog/_document.html.erb
@@ -35,8 +35,6 @@
 
       </dl>
 
-
-      <%= link_to "View", url_for(only_path: true, action: 'show', id: document.id) %> |
-      <%= link_to "Edit", url_for(only_path: true, action: 'edit', id: document.id) %>
+      <%= link_to "Edit this", url_for(only_path: true, action: 'edit', id: document.id) %>
 
     </div>
