--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -13,7 +13,7 @@
   <% end %>
   <div class="field">
     <%= f.label :barcode %><br>
-    <%= f.text_field :barcode %>
+    <%= f.text_field :barcode, class: 'barcode'  %>
   </div>
   <div class="field">
     <%= f.label "Folder Number" %><br>
