--- a/app/views/pul_store/lae/folders/_brief_form.erb
+++ b/app/views/pul_store/lae/folders/_brief_form.erb
@@ -12,7 +12,7 @@
 
   <div class="field">
     <%= f.label :barcode %><br>
-    <%= f.text_field :barcode %>
+    <%= f.text_field :barcode, class: 'barcode' %>
   </div>
  <div class="field">
     <%= f.label :genre %><br>
