--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -98,6 +98,19 @@
         <%= b.text_field :date_created, :id => 'lae_folder_date_created' %>
       </div>
     </div>
+    <!-- :earliest_created, :latest_created -->
+    <div class="control-group">
+      <%= b.label :earliest_created, :class=>"control-label" %>
+      <div class="controls">
+        <%= b.text_field :earliest_created, :id => 'lae_folder_earliest_created' %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= b.label :latest_created, :class=>"control-label" %>
+      <div class="controls">
+        <%= b.text_field :latest_created, :id => 'lae_folder_latest_created' %>
+      </div>
+    </div>
   </div>
   <div id="admin-metadata" class="span4">
     <div id="admin-metadata">
