--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -13,7 +13,7 @@
       <div id="new-folder-modal" class="modal fade" data-backdrop="static">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3>Add a Folder<%= " to #{ @box.id }" unless @box.barcode.nil? %></h3>
+          <h3>Add a Folder to Box <%= @box.physical_number unless @box.barcode.nil? %></h3>
         </div>
         <div class="modal-body">
           <%= render :partial => 'pul_store/lae/folders/ajax_form', locals: { box: @box } %>
