--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -91,25 +91,23 @@
         <%= b.text_area :description, cols: 50, rows: 6 %>
       </div>
     </div>
+    <button id="date-type-toggle" type="button" class="btn">Use Date Range</button>
     <!-- date created -->
-    <div class="control-group" id="date-created">
+    <div class="control-group date-options" id="date-created">
       <%= b.label :date_created, :class=>"control-label" %>
       <div class="controls">
-        <%= b.text_field :date_created, :id => 'lae_folder_date_created' %>
+        <%= b.text_field :date_created, :id => 'lae_folder_date_created', class: 'input-mini' %>
       </div>
     </div>
-    <div id="date-range-optional">
+    <div id="date-range-optional" class="date-options">
     <!-- :earliest_created, :latest_created -->
     <div class="control-group">
-      <%= b.label :earliest_created, :class=>"control-label" %>
-      <div class="controls">
-        <%= b.text_field :earliest_created, :id => 'lae_folder_earliest_created' %>
+      <%= b.label "Start | End", :class=>"control-label" %>
+      <div class="controls input-prepend">
+        <%= b.text_field :earliest_created, :id => 'lae_folder_earliest_created', class: 'input-mini' %>
       </div>
-    </div>
-    <div class="control-group">
-      <%= b.label :latest_created, :class=>"control-label" %>
-      <div class="controls">
-        <%= b.text_field :latest_created, :id => 'lae_folder_latest_created' %>
+      <div class="controls input-append">
+        <%= b.text_field :latest_created, :id => 'lae_folder_latest_created', class: 'input-mini' %>
       </div>
     </div>
   </div>
