--- a/app/views/pul_store/lae/boxes/_form.html.erb
+++ b/app/views/pul_store/lae/boxes/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <%= form_for(@box, :html => {:class => "form form-horizontal"}) do |b| %>
   <% if @box.errors.any? %>
     <div id="error_explanation">
@@ -32,13 +33,13 @@
   <div class="control-group">
     <%= b.label :shipped_date, :class => 'control-label' %>
     <div class="controls">
-      <%= b.text_field :shipped_date, :class => 'datepicker' %>
+      <%= b.text_field :shipped_date, :class => 'datepicker input-small' %>
     </div>
   </div>
   <div class="control-group">
     <%= b.label :received_date, :class => 'control-label' %>
     <div class="controls">
-      <%= b.text_field :received_date, :class => 'datepicker' %>
+      <%= b.text_field :received_date, :class => 'datepicker input-small' %>
     </div>
   </div>
   <div class="control-group">
@@ -51,30 +52,48 @@
     <%= b.submit :value => "Update Box", :class => 'btn btn-primary' %>
   </div>
 <% end %>
-
-  <% if(@box.folders.empty?) %>
-    <h3>Create a Folder</h3>
+</div>
+<div class="row">
+  <h3>
+   <% if(@box.folders.empty?) %>
+    <span id="folder-count">No&nbsp;</span>
   <% else %>
-    <h3><span id="folder-count"><%= @box.folders.size %></span> Folders</h3>
+    <span id="folder-count"><%= @box.folders.size %>&nbsp;</span>
   <% end %>
-
+  Folders</h3>
+<!-- start modal -->
+   <div class="form-control">
+    <%= link_to("Add Folder to Box", '#', 'data-target' => "#new-folder-modal", 'data-toggle' => 'modal', :class => "btn btn-success btn-lg lae-new pull-left new-model", :title => "Add a New Folder to Box") %>
+  </div>
+      <div id="new-folder-modal" class="modal fade" data-backdrop="static">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3>Add a Folder to Box <%= @box.physical_number unless @box.barcode.nil? %></h3>
+        </div>
+        <div class="modal-body">
+          <%= render :partial => 'pul_store/lae/folders/ajax_form', locals: { box: @box } %>
+        </div>
+      </div>
+    </div>
+  <!-- end Modal -->
+</div>
   <table class="table" id="folders-table">
     <thead>
       <tr>
-        <th>Folder Number</th>
+        <th class="header headerSortUp">Folder Number</th>
         <th>State</th>
         <th>Title</th>
-        <th>Barcode</th>
-        <th>Genre</th>
+        <th class="header headerSortUp">Barcode</th>
+        <th class="header headerSortUp">Genre</th>
         <th>Width</th>
         <th>Height</th>
-        <th>Pages</th>
+        <th class="header headerSortUp">Pages</th>
         <th>Created</th>
         <th>Options</th>
       </tr>
     </thead>
     <tbody>
-    <% @box.folders.sort_by {|f1| f1.physical_number.to_i }.each do |f| %>
+    <% @box.folders.sort_by {|f1| f1.physical_number.to_i }.reverse!.each do |f| %>
       <tr>
         <td><%= f.physical_number %></td>
         <td><%= render :partial => 'shared/lae/workflow_state_badge', locals: {object: f }  %></td>
