--- a/app/views/pul_store/lae/folders/edit.html.erb
+++ b/app/views/pul_store/lae/folders/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Update Folder</h1>
+<h1>Update Folder <%= @folder.physical_number %> - Box <%= lae_folder_get_box_number @folder.box_id %></h1>
 <%= render :partial => 'shared/lae/workflow_state', locals: {object: @folder} %>
 <div class="row well">
   <%= render 'form' %>
@@ -6,6 +6,6 @@
 
 <%= link_to 'Show', @folder %> |
 <% if(!@folder.box_id.blank?) %>
-  <%= link_to 'Return to Box', edit_lae_box_path(@folder.box_id) %> |
+  <%= link_to 'Return to editing to Box', edit_lae_box_path(@folder.box_id) %> |
 <% end %>
 <%= link_to 'Back to Folders', lae_folders_path %>
