improved full form layout, cleanup date toggle options

--- a/app/assets/stylesheets/lae.css.scss
+++ b/app/assets/stylesheets/lae.css.scss
@@ -36,6 +36,11 @@ a:visited.btn {
   margin-top: 20px;
 }
 
-#date-range-optional {
+.no-active-date-range, .no-active-date-created {
   display: none;
 }
+
+.active-date-range, .active-date-created {
+  display: block;
+}
+
