--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -8,7 +8,7 @@
                       <span class="icon-bar"></span>
                     </a>
                   <div class="span4">
-                    <%= link_to application_name, root_path, class: "lae-brand" %>
+                    <%= link_to application_name, "/lae", class: "lae-brand" %>
                   </div>
                   <div class="span5 clearfix" id="searchbar">         
                       <%= render 'shared/lae/quick_lookup' %>
