--- a/app/views/pul_store/lae/boxes/_form.html.erb
+++ b/app/views/pul_store/lae/boxes/_form.html.erb
@@ -58,7 +58,7 @@
   </div>
   <div class="control-group actions">
     <div class="controls">
-      <%= b.submit :value => "Update Box", :class => 'btn btn-primary' %>
+      <%= b.submit :value => "Update Box", :class => 'btn btn-primary btn-large' %>
     </div>
   </div>
 </div>
@@ -75,7 +75,7 @@
   Folders</h3>
 <!-- start modal -->
    <div class="form-control">
-    <%= link_to("Add Folder to Box", '#', 'data-target' => "#new-folder-modal", 'data-toggle' => 'modal', :class => "btn btn-success btn-lg lae-new pull-left new-model", :title => "Add a New Folder to Box") %>
+    <%= link_to("Add Folder to Box", '#', 'data-target' => "#new-folder-modal", 'data-toggle' => 'modal', :class => "btn btn-success btn-large lae-new pull-left new-model", :title => "Add a New Folder to Box") %>
   </div>
       <div id="new-folder-modal" class="modal fade" data-backdrop="static">
         <div class="modal-header">
