--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -1,16 +1,22 @@
-
-<div class="span9" id="lae-head">
-  <div class="row">
-    <div class="span6">
-      <h1 class="lae-head"><%= @page_title%></h1>
+<div class="row">
+  <div class="span9" id="lae-head">
+    <div class="row">
+      <div class="span6">
+        <h1 class="lae-head"><%= @page_title%></h1>
+      </div>
     </div>
   </div>
 </div>
+<div class="row">
+  <%= render :partial => 'breadcrumb' %>
+</div>
 
-<div id="content" class="span9 show-document">
-  <%= render 'form' %>
-  <%= link_to 'Show Box', @box %> |
-  <%= link_to 'Back to Box List', lae_boxes_path %>
+<div class="row">
+  <div id="content" class="span9 show-document">
+    <%= render 'form' %>
+    <%= link_to 'Show Box', @box %> |
+    <%= link_to 'Back to Box List', lae_boxes_path %>
+  </div>
 </div>
 
 
