--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -52,7 +52,7 @@
   <div class="control-group">
    <div class="controls actions">
       <%= f.submit :value => "Create Folder", :class => 'btn btn-primary' %>
-      <button id="cancelButton" type="button" class="btn btn-inverse" data-dismiss="modal" aria-hidden="true" title="Close this screen without adding this Folder.">Cancel</button>
+      <button id="cancelButton" type="button" class="btn btn-inverse" data-dismiss="modal" aria-hidden="true" title="Close this screen without adding this Folder.">Return to Box</button>
    </div>
   </div>
 <% end %>
