focus on barcode file after successful new folder create. #146

--- a/app/views/pul_store/lae/folders/create.js.erb
+++ b/app/views/pul_store/lae/folders/create.js.erb
@@ -9,4 +9,5 @@ $(response).prependTo("#new_lae_folder");
   $('#new_lae_folder').each(function(){
     this.reset();
   });
+  $('input:text:visible:first', '#new_lae_folder').focus();
 <% end %>
