--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -14,8 +14,10 @@
 <div class="row">
   <div id="content" class="span9 show-document">
     <%= render 'form' %>
-    <%= link_to 'Show Box', @box %> |
-    <%= link_to 'Back to Box List', lae_boxes_path %>
+    <ul class="nav nav-pills">
+      <li><%= link_to 'View Box', @box %></li>
+      <li><%= link_to 'Return to Boxes', lae_boxes_path %></li>
+    </ul>
   </div>
 </div>
 
