--- a/app/views/pul_store/lae/boxes/show.html.erb
+++ b/app/views/pul_store/lae/boxes/show.html.erb
@@ -7,14 +7,13 @@
   		<%= render :partial => 'breadcrumb' %>
 	</div>
 	<div class="row">
-		<%= render :partial => 'shared/lae/workflow_state', locals: {object: @box} %>
+		<div class="span4 offset1">
+			<% if can?(:edit, @box) %>
+  				<%= link_to 'Edit this Box', edit_lae_box_path(@box), :class => 'btn btn-primary' %>
+			<% end %>
+		</div>
 	</div>
 	<div class="row">
-		<% if can?(:edit, @box) %>
-  			<%= link_to 'Edit', edit_lae_box_path(@box) %> |
-		<% end %>
-
-
-		<%= link_to 'Back', lae_boxes_path %>
+		<%= render :partial => 'box_attributes' %>
 	</div>
 </div>
