--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -60,7 +60,7 @@
     <!-- Contributor -->
       <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :contributor } %>
       <!-- Publisher -->
-      <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :publisher } %>
+      <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => true, :key => :publisher } %>
       <!-- Geographic Origin -->
       <!-- Geographic -->
       <div class="control-group">
@@ -187,7 +187,7 @@
   </div>
  </div>
  <div class="row">
-  <div class="actions span2 offset4">
+  <div class="actions span2 offset2">
     <%= b.submit :value => "Update Folder", :class => 'btn btn-primary btn-large' %>
   </div>
 </div>
